--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -14,7 +14,8 @@
 
 
 <div class= "span12">
-  <div class= "span6">
+<div id="main_page_border" class= "span9">
+  <div class= "span9">
     <div class = "main_page">
     <%=render "main_search_tool"%>
     </div>
@@ -22,6 +23,7 @@
   <div id= "new_bike"class= "span3">
     <%=render "new_bike"%>    
   </div>
+</div>
   <div  id = "sponsored_links" class= "span3">
     <%=render "sponsored_links"%>    
   </div>
@@ -30,4 +32,4 @@
 
 
 
-<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+
